SpecimenImporter performance instrumentation, clean up, and improvements: - Eliminate unnecessary collection allocations in TableSelector; use ForEach instead - Use standard JdbcType methods to determine JdbcType - Some "specimen" -> "vial" clarifications (method names, locals) - Replace lazy initialization with final members set in constructors - Set Container directly when creating Specimen, SpecimenEvent beans (instead of setting later and expanding RowMap) - Instrument slowest import step with multi-phase timer
MultiPhaseCPUTimer: retrieve stats for a single invocation timer, standard logging method

ValueComparableMap: a TreeMap that orders by values, instead of keys

--- a/.gitattributes
+++ b/.gitattributes
@@ -203,6 +203,7 @@ api/src/org/labkey/api/collections/SetFromMap.java -text
 api/src/org/labkey/api/collections/Sets.java -text
 api/src/org/labkey/api/collections/SparseBitSet.java -text
 api/src/org/labkey/api/collections/SwapQueue.java -text
+api/src/org/labkey/api/collections/ValueComparableMap.java -text
 api/src/org/labkey/api/concurrent/CountingSemaphore.java -text
 api/src/org/labkey/api/data/AES.java -text
 api/src/org/labkey/api/data/AJAXDetailsDisplayColumn.java -text
