Cache schema.xml files using ModuleResourceCache (i.e., replace ResourceRef, isStale(), and polling of file timestamps with FileListener)
Clean up DbSchema and DbSchemaType handling:

- Remove nearly all cases of that annoying log message ("no schema metadata xml file found for schema 'foo'")
- Fix code that used the wrong DbSchemaType (which causes us to cache/invalidate incorrectly)
- Make explicit the few cases where caller doesn't know the schema type (DbSchemaType.Unknown)
- Delegate schema creation to centralized methods that do the right thing (e.g., all subclasses of AbstractAuditTypeProvider now delegate schema creation to their parent)
- Modules now declare a list of provisioned schemas, which provides validation & helps infer types in the Unknown case
- Correct "audit" (load as Provisioned and remove audit.xml) and "specimentables" (add to study schema list and load as Provisioned)

--- a/.gitattributes
+++ b/.gitattributes
@@ -348,6 +348,7 @@ api/src/org/labkey/api/data/SQLFragment.java -text
 api/src/org/labkey/api/data/SQLGenerationException.java -text
 api/src/org/labkey/api/data/SchemaColumnMetaData.java -text
 api/src/org/labkey/api/data/SchemaTableInfoCache.java -text
+api/src/org/labkey/api/data/SchemaXmlCacheHandler.java -text
 api/src/org/labkey/api/data/Selector.java -text
 api/src/org/labkey/api/data/ShowRows.java -text
 api/src/org/labkey/api/data/ShowRowsConverter.java -text
