CDS: Support for RSS feed aggregation.

--- a/.gitattributes
+++ b/.gitattributes
@@ -7979,6 +7979,9 @@ internal/src/org/labkey/api/query/SimpleQueryUpdateService.java -text
 internal/src/org/labkey/api/query/SimpleTableDomainKind.java -text
 internal/src/org/labkey/api/query/SimpleUserSchema.java -text
 internal/src/org/labkey/api/query/TempQuerySettings.java -text
+internal/src/org/labkey/api/rss/RSSFeed.java -text
+internal/src/org/labkey/api/rss/RSSService.java -text
+internal/src/org/labkey/api/rss/RSSServiceImpl.java -text
 internal/src/org/labkey/api/script/ExternalScriptable.java -text
 internal/src/org/labkey/api/script/RhinoCompiledScript.java -text
 internal/src/org/labkey/api/script/RhinoScriptEngine.java -text
