Move issue feature. This commit adds the functionality to move an issue from one container to another given that the admins have setup some containers to move into.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1623,6 +1623,8 @@ issues/src/org/labkey/issue/rss.jsp -text
 issues/src/org/labkey/issue/summaryWebpart.jsp -text
 issues/src/org/labkey/issue/updateEmail.jsp -text
 issues/src/org/labkey/issue/updateView.jsp -text
+issues/webapp/issues/admin.js -text
+issues/webapp/issues/detail.js -text
 issues/webapp/issues/hashbang.js -text
 list/List.iml -text
 list/ListGWT.iml -text
