--- a/.gitattributes
+++ b/.gitattributes
@@ -3093,6 +3093,7 @@ study/resources/schemas/dbscripts/postgresql/study-14.12-14.13.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.13-14.14.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.14-14.15.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.15-14.16.sql -text
+study/resources/schemas/dbscripts/postgresql/study-14.16-14.17.sql -text
 study/resources/schemas/dbscripts/postgresql/study-create.sql -text
 study/resources/schemas/dbscripts/postgresql/study-drop.sql -text
 study/resources/schemas/dbscripts/sqlserver/obsolete/study-0.00-1.11.sql -text
@@ -3324,6 +3325,7 @@ study/resources/schemas/dbscripts/sqlserver/study-14.11-14.12.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.12-14.13.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.13-14.14.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.14-14.15.sql -text
+study/resources/schemas/dbscripts/sqlserver/study-14.16-14.17.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-create.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-drop.sql -text
 study/resources/schemas/study.xml -text
