Introduce InlineInClauseGenerator to help prevent passing more than 2000 JDBC parameters to SQLServer. Make this approach the default for SQLServer.

--- a/.gitattributes
+++ b/.gitattributes
@@ -289,6 +289,7 @@ api/src/org/labkey/api/data/HtmlWriter.java -text
 api/src/org/labkey/api/data/IconDisplayColumn.java -text
 api/src/org/labkey/api/data/ImportAliasable.java -text
 api/src/org/labkey/api/data/InClauseGenerator.java -text
+api/src/org/labkey/api/data/InlineInClauseGenerator.java -text
 api/src/org/labkey/api/data/InputColumn.java -text
 api/src/org/labkey/api/data/JavaScriptDisplayColumn.java -text
 api/src/org/labkey/api/data/JavaScriptDisplayColumnFactory.java -text
