Issue 19109: **ClassCastException in org.labkey.api.exp.ObjectProperty.init() Issue 20666: **DataIntegrityViolationException from org.labkey.experiment.api.ExperimentServiceImpl.deleteMaterialByRowIds()

--- a/.gitattributes
+++ b/.gitattributes
@@ -589,6 +589,7 @@ api/src/org/labkey/api/exp/DuplicateMaterialException.java -text
 api/src/org/labkey/api/exp/ExpQCFlag.java -text
 api/src/org/labkey/api/exp/ExperimentDataHandler.java -text
 api/src/org/labkey/api/exp/ExperimentException.java -text
+api/src/org/labkey/api/exp/ExperimentMaterialListener.java -text
 api/src/org/labkey/api/exp/ExperimentRunListView.java -text
 api/src/org/labkey/api/exp/ExperimentRunType.java -text
 api/src/org/labkey/api/exp/ExperimentRunTypeSource.java -text
