LogOutputStream: an OutputStream that streams to a provided log4j Logger, flushing one line at a time. LogPrintWriter: a convenience PrintWriter implementation that uses LogOutputStream to write to a Logger.
Rewrite QueryProfiler to render and export without building up content in memory... query stat info is now streamed one row at a time to PrintWriter or ServletResponse.

Add ShutdownListener.getName() and log each listener's shutdownPre and shutdownStarted calls for timing and debugging purposes. Do the same for StartupListener, for consistency.

This change addresses OutOfMemoryException related to: Issue 20782: Server shutdown on linux takes >1.5 minutes to complete

--- a/.gitattributes
+++ b/.gitattributes
@@ -1530,6 +1530,8 @@ api/src/org/labkey/api/util/JdbcUtil.java -text
 api/src/org/labkey/api/util/Job.java -text
 api/src/org/labkey/api/util/JobRunner.java -text
 api/src/org/labkey/api/util/JsonUtil.java -text
+api/src/org/labkey/api/util/LogOutputStream.java -text
+api/src/org/labkey/api/util/LogPrintWriter.java -text
 api/src/org/labkey/api/util/MXBeanAppender.java -text
 api/src/org/labkey/api/util/MatrixUtil.java -text
 api/src/org/labkey/api/util/MemTrackable.java -text
