Add beta_nav_arrow.png.  - Required for beta nav css.

--- a/.gitattributes
+++ b/.gitattributes
@@ -7303,6 +7303,7 @@ internal/webapp/_images/arrow_right.png -text
 internal/webapp/_images/arrow_up.png -text
 internal/webapp/_images/audit_log.png -text
 internal/webapp/_images/beta.gif -text
+internal/webapp/_images/beta_nav_arrow.png -text
 internal/webapp/_images/button_arrow.gif -text
 internal/webapp/_images/button_bar_bg.gif -text
 internal/webapp/_images/button_bar_left.gif -text
