--- a/.gitattributes
+++ b/.gitattributes
@@ -151,6 +151,7 @@ api/src/org/labkey/api/audit/view/AuditChangesView.java -text
 api/src/org/labkey/api/cache/BlockingCache.java -text
 api/src/org/labkey/api/cache/BlockingStringKeyCache.java -text
 api/src/org/labkey/api/cache/Cache.java -text
+api/src/org/labkey/api/cache/CacheListener.java -text
 api/src/org/labkey/api/cache/CacheLoader.java -text
 api/src/org/labkey/api/cache/CacheManager.java -text
 api/src/org/labkey/api/cache/CacheProvider.java -text
