--- a/.gitattributes
+++ b/.gitattributes
@@ -4438,6 +4438,7 @@ wiki/radeox/lib/asm.jar -text
 wiki/radeox/lib/commons-logging.jar -text
 wiki/radeox/lib/groovy.jar -text
 wiki/radeox/lib/jakarta-oro.jar -text
+wiki/radeox/lib/junitperf-1.9.1.jar -text
 wiki/radeox/lib/picocontainer.jar -text
 wiki/radeox/license.txt -text
 wiki/radeox/src/META-INF/manifest.radeox -text
