Better recovery when custom icon is missing (redirect to static image)
Restore previous getIconPath() handling for MS1 and MS2 ReportUIProviders... recent refactor was too aggressive, since getIconPath() return value determines whether a ReportUIProvider claims the report type. Document this ReportUIProvider behavior.

Add "advanced report" icon and claim it in StudyReportUIProvider

More consistent icon URL handling to fix report icons in report & participant group menus. DesignerInfo getIconURL() now returns a URLHelper (instead of a string) and NavTree.setImageSrc() now takes a URLHelper. This gives us good choke points for adding context path and revision parameter to all icon URLs.

--- a/.gitattributes
+++ b/.gitattributes
@@ -2720,6 +2720,7 @@ query/webapp/query/sql.gif -text
 query/webapp/query/validateQueries.js -text
 query/webapp/reports/ScriptReportPanel.css -text
 query/webapp/reports/ScriptReportPanel.js -text
+query/webapp/reports/advanced.png -text
 query/webapp/reports/attachment.png -text
 query/webapp/reports/chart.gif -text
 query/webapp/reports/crosstab.png -text
