--- a/.gitattributes
+++ b/.gitattributes
@@ -1697,6 +1697,8 @@ list/src/org/labkey/list/model/ListImporter.java -text
 list/src/org/labkey/list/model/ListItemImpl.java -text
 list/src/org/labkey/list/model/ListItm.java -text
 list/src/org/labkey/list/model/ListManager.java -text
+list/src/org/labkey/list/model/ListManagerSchema.java -text
+list/src/org/labkey/list/model/ListManagerTable.java -text
 list/src/org/labkey/list/model/ListQuerySchema.java -text
 list/src/org/labkey/list/model/ListQueryUpdateService.java -text
 list/src/org/labkey/list/model/ListSchema.java -text
@@ -1714,6 +1716,8 @@ list/src/org/labkey/list/view/ListQueryView.java -text
 list/src/org/labkey/list/view/ListWebPart.java -text
 list/src/org/labkey/list/view/SingleListWebPartFactory.java -text
 list/src/org/labkey/list/view/UploadListItemsForm.java -text
+list/src/org/labkey/list/view/ViewDesignColumn.java -text
+list/src/org/labkey/list/view/ViewHistoryColumn.java -text
 list/src/org/labkey/list/view/begin.jsp -text
 list/src/org/labkey/list/view/customizeSingleListWebPart.jsp -text
 list/src/org/labkey/list/view/deleteListDefinition.jsp -text
