--- a/.gitattributes
+++ b/.gitattributes
@@ -8275,6 +8275,8 @@ internal/webapp/vis/demo/demo_script.js -text
 internal/webapp/vis/demo/index.html -text
 internal/webapp/vis/lib/d3-3.3.9.js -text
 internal/webapp/vis/lib/d3-3.3.9.min.js -text
+internal/webapp/vis/lib/hexbin.js -text
+internal/webapp/vis/lib/hexbin.min.js -text
 internal/webapp/vis/lib/patches.js -text
 internal/webapp/vis/lib/raphael-2.1.0.js -text
 internal/webapp/vis/lib/raphael-min-2.1.0.js -text
