--- a/.gitattributes
+++ b/.gitattributes
@@ -343,6 +343,7 @@ api/src/org/labkey/api/data/ReportingWriter.java -text
 api/src/org/labkey/api/data/ResultSetFactory.java -text
 api/src/org/labkey/api/data/ResultSetImpl.java -text
 api/src/org/labkey/api/data/ResultSetMetaDataImpl.java -text
+api/src/org/labkey/api/data/ResultSetMetaDataWrapper.java -text
 api/src/org/labkey/api/data/ResultSetSelector.java -text
 api/src/org/labkey/api/data/ResultSetSelectorTestCase.java -text
 api/src/org/labkey/api/data/Results.java -text
