--- a/.gitattributes
+++ b/.gitattributes
@@ -304,6 +304,7 @@ api/src/org/labkey/api/data/LegacySqlExecutor.java -text
 api/src/org/labkey/api/data/LegacySqlSelector.java -text
 api/src/org/labkey/api/data/LegacyTableSelector.java -text
 api/src/org/labkey/api/data/LinkedSchemaCustomizer.java -text
+api/src/org/labkey/api/data/LoggingResultSetWrapper.java -text
 api/src/org/labkey/api/data/LookupColumn.java -text
 api/src/org/labkey/api/data/MVDisplayColumn.java -text
 api/src/org/labkey/api/data/MVDisplayColumnFactory.java -text
@@ -336,6 +337,7 @@ api/src/org/labkey/api/data/PropertyEncryption.java -text
 api/src/org/labkey/api/data/PropertySchema.java -text
 api/src/org/labkey/api/data/PropertyStorageSpec.java -text
 api/src/org/labkey/api/data/PropertyStore.java -text
+api/src/org/labkey/api/data/QueryLogging.java -text
 api/src/org/labkey/api/data/RemappingDisplayColumnFactory.java -text
 api/src/org/labkey/api/data/RenderColumn.java -text
 api/src/org/labkey/api/data/RenderContextDecorator.java -text
@@ -355,6 +357,8 @@ api/src/org/labkey/api/data/SchemaColumnMetaData.java -text
 api/src/org/labkey/api/data/SchemaNameCache.java -text
 api/src/org/labkey/api/data/SchemaTableInfoCache.java -text
 api/src/org/labkey/api/data/SchemaXmlCacheHandler.java -text
+api/src/org/labkey/api/data/SelectQueryAuditEvent.java -text
+api/src/org/labkey/api/data/SelectQueryAuditProvider.java -text
 api/src/org/labkey/api/data/Selector.java -text
 api/src/org/labkey/api/data/ShowRows.java -text
 api/src/org/labkey/api/data/ShowRowsConverter.java -text
