--- a/.gitattributes
+++ b/.gitattributes
@@ -302,6 +302,7 @@ core/resources/schemas/dbscripts/postgresql/core-13.30-14.10.sql -text
 core/resources/schemas/dbscripts/postgresql/core-14.20-14.21.sql -text
 core/resources/schemas/dbscripts/postgresql/core-14.21-14.22.sql -text
 core/resources/schemas/dbscripts/postgresql/core-14.22-14.23.sql -text
+core/resources/schemas/dbscripts/postgresql/core-14.23-14.24.sql -text
 core/resources/schemas/dbscripts/postgresql/core-create.sql -text
 core/resources/schemas/dbscripts/postgresql/core-drop.sql -text
 core/resources/schemas/dbscripts/postgresql/labkey-0.00-13.30.sql -text
