--- a/.gitattributes
+++ b/.gitattributes
@@ -3161,6 +3161,7 @@ study/resources/schemas/dbscripts/postgresql/study-14.15-14.16.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.16-14.17.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.17-14.18.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.20-14.21.sql -text
+study/resources/schemas/dbscripts/postgresql/study-14.21-14.22.sql -text
 study/resources/schemas/dbscripts/postgresql/study-create.sql -text
 study/resources/schemas/dbscripts/postgresql/study-drop.sql -text
 study/resources/schemas/dbscripts/sqlserver/obsolete/study-0.00-1.11.sql -text
@@ -3397,6 +3398,7 @@ study/resources/schemas/dbscripts/sqlserver/study-14.14-14.15.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.16-14.17.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.17-14.18.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.20-14.21.sql -text
+study/resources/schemas/dbscripts/sqlserver/study-14.21-14.22.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-create.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-drop.sql -text
 study/resources/schemas/study.xml -text
